welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	val n:Int=num.length.toInt
	var compteur:Int=0
	var niveu:Int=0
	var place:Int=0
	for (x<- 1 to n/2+1) {
		while (num(x)!=niveau) {
			place=place+1
		}
		compteur=compteur+1
		niveau=niveau+1
		
			
		}
	}

